--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nanoid": "^5.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "react-table": "^7.8.0"
   },
   "devDependencies": {
