--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "proxy": "<http://itgirlschool.justmakeit.ru>",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -16,6 +17,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@tanstack/react-table": "^8.15.3",
+    "mobx": "^6.12.3",
+    "mobx-react": "^9.1.1",
+    "mobx-react-lite": "^4.0.7",
     "nanoid": "^5.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
